fixed overflow CSS

--- a/src/css/base.css
+++ b/src/css/base.css
@@ -114,14 +114,17 @@ body {
 }
 
 .pathwayChip {
-    color: gray;
-    background-color:  rgb(238, 238, 238);
-    border-radius: 20px;
-    padding: 10px;
-    margin-top: 3px;
-    margin-bottom: 3px;
-    font-family: sans-serif;
-    font-size: small;
+  color: gray;
+  background-color:  rgb(238, 238, 238);
+  border-radius: 20px;
+  padding: 10px;
+  margin-top: 3px;
+  margin-bottom: 3px;
+  font-family: sans-serif;
+  font-size: small;
+  width: 180px;
+  word-break: break-all;
+  white-space: normal;
 }
 
 .inlinePathwayChip {
